xliff-22/test-suite/core/invalid/bad_IgnorableIdNotUnique.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en">
 <file id="f1">
  <unit id="1">
   <ignorable id="i1twice">
    <source> </source>
   </ignorable>
   <segment>
    <source>source</source>
   </segment>
   <ignorable id="i1twice">
    <source> </source>
   </ignorable>
  </unit>
 </file>
</xliff>
